# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.11
#

2005-10-27 13:25:29 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-52

    Summary:
      xml, fix stl:attributes, coerce unicode values to byte strings
    Revision:
      itools--main--0.11--patch-52


    modified files:
     Changelog xml/stl.py


2005-10-27 13:20:25 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-51

    Summary:
      uri, fix query parsing (#119)
    Revision:
      itools--main--0.11--patch-51


    modified files:
     Changelog uri/generic.py


2005-10-27 10:25:49 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      html, fix parser
    Revision:
      itools--main--0.11--patch-50


    modified files:
     Changelog html/HTML.py html/parser.py


2005-10-27 10:05:19 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-49

    Summary:
      html, remove ATTRIBUTE event in parser (like we do in xml)
    Revision:
      itools--main--0.11--patch-49


    modified files:
     Changelog html/HTML.py html/parser.py


2005-10-26 19:19:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48

    Summary:
      handlers, remove "print" statement
    Revision:
      itools--main--0.11--patch-48


    modified files:
     Changelog handlers/transactions.py


2005-10-26 19:18:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-47

    Summary:
      resources, change transactions API (just "resource.get_transaction")
    Revision:
      itools--main--0.11--patch-47


    modified files:
     Changelog handlers/Handler.py handlers/transactions.py
     resources/base.py resources/zope2.py


2005-10-26 19:15:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-46

    Summary:
      gettext, fix "PO.to_str" (return a byte string)
    Revision:
      itools--main--0.11--patch-46


    modified files:
     Changelog gettext/PO.py


2005-10-26 18:17:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-45

    Summary: